# smach

./: .gitignore  README.md  cv.srv  what_is_that_smach_completed.py
smach_task/: what_is_that_smach_completed.py
smach_task/cabinet_task/: main_cabinet.py
smach_task/carry_my_luggage_task/: #main_carry_my_luggage.py#  carry_my_luggage.py  main_carry_my_luggage.py  main_carry_my_luggage_onsite.py  main_smach.py  test_flask_server.py
smach_task/carry_my_luggage_task/util/: environment_descriptor.py  guest_name_manager.py
smach_task/config/: eic3_fur.yaml  find_my_mate_database.yaml  fur_ais.yaml  fur_data.yaml  fur_data_onsite.yaml  new_fur_data.yaml  receptionist_database.yaml  receptionist_database_archive.yaml
smach_task/final_round/util/: environment_descriptor.py
smach_task/find_my_friend_task/: #main_find_my_friend.py#
smach_task/find_my_mate_task/: main_find_my_friend.py  main_find_my_mate.py  main_find_my_mate_onsite.py
smach_task/find_my_mate_task/util/: environment_descriptor.py  guest_name_manager.py
smach_task/gpsr_task/: #main_gpsr.py#  #sm_finditem.py#  main.py  main_gpsr.py  sm_finditem.py  sm_go_to.py  sm_howmany.py  smach_gpsr.py
smach_task/gpsr_task/util/: environment_descriptor.py  nlp_server.py
smach_task/hand_me_that/: main_hand_me_that.py  test_sort.py
smach_task/hand_me_that/util/: environment_descriptor.py
smach_task/handmethat/: main.py  old.py
smach_task/lasttaskFuckingIdiotWalky/: FuckUwalky.py
smach_task/manipulation/: door-test.py  door_open.py  l.txt  manipulation_pipeline.py  manipulation_pipeline_smach.py  manipulation_pipeline_smach_lowlevel.py  manipulation_side_pipeline_smach.py  objdtc_forplace_smach.py  place_objdetect_smach.py  smach_door_detection.py  smach_place.py  smach_place_demo.py  test_rs_depth.py  xcv.py
smach_task/old/carry_my_luggage_task/: follow_me  follow_me.py  main_carry_my_luggage.py  main_carry_my_luggage_onsite.py
smach_task/old/final_round/: main_final.py
smach_task/old/find_my_mate_task/: main_find_my_mate.py
smach_task/old/gpsr_task/: sm_bringit.py  sm_find_person.py
smach_task/old/hand_me_that/: main_hand_me_that.py  test_sort.py
smach_task/old/lasttaskFuckingIdiotWalky/: kuay.py
smach_task/old/manipulation/: custom_socket.py  environment_descriptor.py  manipulation_pipeline_smach.py  sethome_movegroup.py  smach_place.py
smach_task/old/receptionist_task/: main_receptionist.py
smach_task/old/resterant/: check.py  fucku.yaml  main.py
smach_task/old/serving_breakfast_task/: main_serving_breakfast_onsite.py
smach_task/old/storing_groceries_task/: smach_storing_groceries.py
smach_task/receptionist_task/: ggggggg.py  main.py  main_receptionist.py  main_receptionist_add_person_describtion.py  main_receptionist_onsite.py  seat_avail_test.py  smach_receptionist.py
smach_task/restaurant_task/: main_restaurant_task.py
smach_task/resterant/: main.py  test.py
smach_task/serving_breakfast_task/: demo_serving_breakfast.py  main_serving_breakfast.py  main_serving_breakfast_know_object_side.py  main_serving_breakfast_onsite.py  main_serving_breakfast_test.py
smach_task/storing_groceries_task/: smach_storing_groceries.py
smach_task/util_master/: environment_descriptor.py
smach_task/what_is_that_task/: main_what_is_that.py  what_is_that_smach_simplified.py
smach_task/where_is_this_task/: main_where_is_this_onsite.py  whereisthatshit.py
smach_task_2023/: SEX_maker.py  carry_my_luggage.md  state_contructor.py  task_carry_my_luggage.txt  task_receptionist.py  task_receptionist_revised.py  task_restaurant.py  test.py
smach_task_2023/core_cv/: face_recognition.py  image_captioning.py  pose_estimation.py  send_to_ros.py  utils.py  yolov8_tracker.py
smach_task_2023/core_nlp/: emerStop.py  utils.py
smach_task_2023/core_smach/: example_sex.yaml  move_to.py  navigate_SEX.py  person.py  pyyamltest.py  test.yaml
walkie2_ws/src/cr3_moveit_control/: CMakeLists.txt  package.xml
walkie2_ws/src/cr3_moveit_control/config/: fur_data.yaml  moveit_servo_config.yaml  moveit_servo_config_sim.yaml
walkie2_ws/src/cr3_moveit_control/config/constraints/: back_wall.json  floor.json
walkie2_ws/src/cr3_moveit_control/include/: PickWithSide.h  PickWithSideRequest.h  PickWithSideResponse.h  cr3_pick.h  cr3_pickRequest.h  cr3_pickResponse.h  cr3_place.h  cr3_placeRequest.h  cr3_placeResponse.h
walkie2_ws/src/cr3_moveit_control/launch/: cr3_moveit_planning_execution.launch  cr3_moveit_planning_execution_w_mobile_base.launch  cr3_pick_n_place_real.launch  cr3_pick_n_place_real_catesian.launch  cr3_pick_n_place_sim.launch  cr3_pick_n_place_sim_catesian.launch  kan_algorithm_grasp.launch  manipulation_pipeline_real.launch  manipulation_pipeline_sim.launch  manipulation_pipeline_sim_bag.launch  pick_service_real.launch  pick_service_select_side_real.launch  pick_service_select_side_sim.launch  pick_service_sim.launch  pick_service_visual_servo.launch  place_algorithm.launch  place_algorithm_real_demo.launch  place_algorithm_sim_demo.launch  place_service_real.launch  place_service_real_pub_joint_state.launch  place_service_sim.launch  visual_servo_real.launch  visual_servo_sim.launch
walkie2_ws/src/cr3_moveit_control/src/: constraint_publisher.cpp  fortest  fortest.cpp  furniture_marker.py  kan_algorithm_grasp.cpp  pick_client.cpp  pick_client_python.py  pick_client_select_side.py  pick_service_adjust_yaw.cpp  pick_service_select_side.cpp  pick_service_visual_servo.cpp  place_algorithm.cpp  place_algorithm_demo.cpp  place_client_python.py  place_service.cpp  pub_joint_states.py  remap_joint_states.py  robot_control_node_real_catesian.cpp  robot_control_node_sim.cpp  robot_control_node_sim_catesian.cpp  set_home_walkie.py  test_lift_with_topic.py  test_moveit.cpp  tf_test.cpp  visual_servo.cpp
walkie2_ws/src/cr3_moveit_control/src/mega/: mega.ino
walkie2_ws/src/cr3_moveit_control/srv/: PickWithSide.srv  cr3_pick.srv  cr3_place.srv
walkie2_ws/src/cr3_moveit_control/worlds/: pick_and_place_prism.world
walkie3_ws/: main.py  socketconfig_Linux_walkie.yaml
(+315 files in other folders)
